# argus

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/raw/: .gitkeep
src/argus/: __init__.py  config.py
src/argus/application/: __init__.py  pipeline.py
src/argus/data/: __init__.py  cenario.py  ingestao.py  preparacao.py  qualidade.py  sintetico.py
src/argus/detection/: __init__.py  anomalia.py  benford.py  risco.py
src/argus/domain/: __init__.py  models.py
src/argus/genai/: __init__.py  client.py  prompts.py  servico.py  templates.py
tests/: conftest.py  test_benford.py  test_pipeline.py
