[project]
name = "argus"
version = "0.1.0"
description = "Copiloto de auditoria forense — detecção e explicação de fraude com análise de dados + IA generativa."
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
